# rvr

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  BENCHMARKS.md  Cargo.toml  README.md  nextest.toml  rust-toolchain.toml
.config/: nextest.toml
benchmarks/: build.sh
benchmarks/targets/: link.x  rv32e.json  rv32i.json  rv64i.json
crates/rvr/: Cargo.toml  build.rs
crates/rvr-cfg/: Cargo.toml
crates/rvr-cfg/src/: analysis.rs  analyzer.rs  block_table.rs  decoder.rs  instruction_table.rs  lib.rs  value.rs
crates/rvr-cfg/src/analysis/: data.rs  mod.rs
crates/rvr-elf/: Cargo.toml
crates/rvr-elf/src/: constants.rs  debug.rs  file.rs  header.rs  image.rs  lib.rs
crates/rvr-emit/: Cargo.toml
crates/rvr-emit/src/: config.rs  dispatch.rs  emitter.rs  header.rs  htif.rs  inputs.rs  layout.rs  lib.rs  memory.rs  project.rs  signature.rs  syscalls.rs  tracer.rs
crates/rvr-emit/src/arm64/: dispatch.rs  emitter.rs  htif.rs  ir.rs  mod.rs  prologue.rs  registers.rs
crates/rvr-emit/src/arm64/ir/: expr.rs  mod.rs  stmt.rs  terminator.rs
crates/rvr-emit/src/arm64/ir/expr/: mod.rs  ops.rs  ops_binary.rs  ops_unary.rs
crates/rvr-emit/src/c/: config.rs  dispatch.rs  emitter.rs  header.rs  htif.rs  memory.rs  mod.rs  project.rs  signature.rs  syscalls.rs  tracer.rs
crates/rvr-emit/src/c/emitter/: block.rs  expr.rs  mod.rs  terminator.rs  tests.rs
crates/rvr-emit/src/c/header/: csr.rs  dispatch.rs  helpers.rs  memory.rs  mod.rs  prelude.rs  state.rs  trace.rs
crates/rvr-emit/src/c/tracers/: buffered_diff.rs  debug.rs  diff.rs  dynamic.rs  ffi.rs  mod.rs  none.rs  preflight.rs  spike.rs  stats.rs
crates/rvr-emit/src/c/tracers/templates/: buffered_diff.h.in  diff.h.in  preflight.h.in  spike.h.in  stats.h.in
crates/rvr-emit/src/tracers/: debug.rs  dynamic.rs  ffi.rs  mod.rs  none.rs  preflight.rs  stats.rs
crates/rvr-emit/src/x86/: dispatch.rs  emitter.rs  instructions.rs  ir.rs  mod.rs  prologue.rs  registers.rs
crates/rvr-emit/src/x86/ir/: expr.rs  mod.rs  stmt.rs  terminator.rs
crates/rvr-emit/src/x86/ir/expr/: mod.rs  ops.rs
crates/rvr-emit/tracers/: README.md  minimal.h
crates/rvr-emit/tracers/rust/: pc_count.rs
crates/rvr-ir/: Cargo.toml
crates/rvr-ir/src/: block.rs  builder.rs  expr.rs  instr.rs  lib.rs  lift.rs  stmt.rs  terminator.rs  xlen.rs
crates/rvr-ir/src/expr/: mod.rs  tests.rs
crates/rvr-isa/: Cargo.toml
crates/rvr-isa/examples/: keccakf_ext.rs
crates/rvr-isa/src/: a.rs  base.rs  c.rs  decode.rs  encode.rs  lib.rs  m.rs  syscalls.rs  types.rs  zicsr.rs
crates/rvr-isa/src/extensions/: a.rs  base.rs  c.rs  m.rs  mod.rs  zba.rs  zbb.rs  zbkb.rs  zbs.rs  zicond.rs  zicsr.rs  zifencei.rs
crates/rvr-isa/src/extensions/base/: decode.rs  disasm.rs  (+2 more)
crates/rvr-isa/src/syscalls/: baremetal.rs  linux.rs  mod.rs  table.rs
crates/rvr-rt/: Cargo.toml  build.rs
crates/rvr-rt/src/: alloc.rs  critical.rs  entry.rs  lib.rs  panic.rs
crates/rvr-state/: Cargo.toml
crates/rvr-state/src/: lib.rs  memory.rs  state.rs  suspender.rs
crates/rvr-state/src/tracer/: ffi.rs  mod.rs  state.rs
crates/rvr/benches/: coremark.rs  libriscv.rs  minimal.rs  polkavm.rs  prime_sieve.rs  reth.rs  riscv_benchmarks.rs  riscv_tests.rs
crates/rvr/benches/support/: bench_utils.rs  libriscv.rs  mod.rs  polkavm.rs  registry.rs  rust_bench.rs
crates/rvr/benches/support/coremark/: host_portme.h  mod.rs  riscv_portme.h
crates/rvr/benches/support/riscv_tests/: host_syscalls.c  mod.rs
crates/rvr/src/: bench.rs  build_utils.rs  cli.rs  compile.rs  error.rs  lib.rs  main.rs  metrics.rs  perf.rs  pipeline.rs  polkavm.rs  recompiler.rs  runner.rs  terminal.rs  tests.rs
crates/rvr/src/commands/: bench.rs  build.rs  compile.rs  mod.rs  run.rs  test.rs
crates/rvr/src/commands/bench/: coremark.rs  libriscv.rs  mod.rs  polkavm.rs  registry.rs  report.rs  riscv_tests.rs
crates/rvr/src/commands/bench/coremark/: host_portme.c  mod.rs  riscv_portme.c  riscv_portme.h
crates/rvr/src/commands/bench/riscv_tests/: mod.rs
crates/rvr/src/commands/dev/: diff.rs  mod.rs  trace.rs  trace_cmd.rs
crates/rvr/src/commands/dev/diff/: compile.rs  mod.rs  pure_c.rs
crates/rvr/src/commands/test/: mod.rs
crates/rvr/src/commands/test/arch_tests/: mod.rs
crates/rvr/src/commands/test/diff/: c_compare.rs  compare.rs  executor.rs  inprocess.rs  mod.rs  spike.rs  state.rs
crates/rvr/src/commands/test/riscv_tests/: mod.rs
crates/rvr/src/commands/test/trace/: mod.rs
crates/rvr/src/gdb/: mod.rs  target.rs
crates/rvr/src/runner/: api.rs  buffered_diff.rs  debug.rs  diff.rs  error.rs  fixed.rs  mod.rs  preflight.rs  stats.rs  suspend.rs  traits.rs  typed.rs
crates/rvr/src/test_support/: arch_tests.rs  mod.rs  riscv_tests.rs
crates/rvr/src/test_support/diff/: c_compare.rs  compare.rs  compile.rs  executor.rs  inprocess.rs  mod.rs  spike.rs  state.rs
crates/rvr/src/test_support/trace/: compare.rs  mod.rs  parse.rs  tests.rs  util.rs
crates/rvr/tests/: arch_tests.rs  common.rs  diff.rs  integration.rs  riscv_arch_test.rs  riscv_tests.rs  test_utils.rs
crates/rvr/tests/support/: riscv_arch_test.rs  riscv_tests.rs
crates/rvr/tests/support/riscv_arch_test_harness/: link.ld  model_test.h
examples/: basic_compile.rs  custom_config.rs  custom_extension.rs  custom_tracer.rs  instruction_override.rs  pipeline_api.rs
programs/reth/: .gitignore  Cargo.toml  README.md
programs/reth-validator/: Cargo.toml  Makefile  README.md  rust-toolchain.toml  rv32e.json  rv32i.json  rv64e.json  rv64i.json
programs/reth-validator/.cargo/: config.toml
programs/reth-validator/src/: panic.rs
programs/reth-validator/src/libs/: senders.rs
programs/reth/fixtures/: 22974575.json  22974576.json
programs/reth/src/: allocator.rs  critical_section.rs  entry.rs  main.rs
programs/reth/src/libs/: mod.rs
scripts/: bench-summary.sh  build-riscv-tests.sh  ci.sh  compare_backends.sh  copy-riscv-tests.sh  emit_tracer_header.py  perf-run.sh  reth-build.sh  run-riscv-tests.sh
toolchain/: bench_host_syscalls.c  dhrystone_fix.h  entry.S  rv32e.json  rv32i.json  rv64e.json  rv64i.json
(+4 files in other folders)
