[workspace]
resolver = "2"
members = [
    "crates/rvr",
    "crates/rvr-elf",
    "crates/rvr-isa",
    "crates/rvr-ir",
    "crates/rvr-cfg",
    "crates/rvr-emit",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Ayush Jain"]
repository = "https://github.com/ayush/rvr"

[workspace.dependencies]
thiserror = "1.0"
rayon = "1.10"
clap = { version = "4.5", features = ["derive"] }
libloading = "0.8"
num_cpus = "1.16"

# Internal crates
rvr-elf = { path = "crates/rvr-elf" }
rvr-isa = { path = "crates/rvr-isa" }
rvr-ir = { path = "crates/rvr-ir" }
rvr-cfg = { path = "crates/rvr-cfg" }
rvr-emit = { path = "crates/rvr-emit" }
