[workspace]
resolver = "2"
members = [
    "crates/rvr",
    "crates/rvr-elf",
    "crates/rvr-isa",
    "crates/rvr-ir",
    "crates/rvr-cfg",
    "crates/rvr-emit",
    "crates/rvr-state",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85" # edition 2024 minimum; using nightly via rust-toolchain.toml
license = "MIT OR Apache-2.0"
authors = ["Ayush Jain"]
repository = "https://github.com/ayush/rvr"

[workspace.dependencies]
thiserror = "2.0"
rayon = "1.11"
rustc-hash = "2.1"
clap = { version = "4.5", features = ["derive"] }
libloading = "0.9"
num_cpus = "1.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.24"
perf-event = "0.4"
metrics = "0.24"
parking_lot = "0.12"
indicatif = "0.18"
console = "0.16"

# GDB debugging support
gdbstub = "0.7"
gdbstub_arch = "0.3"

# Compression
zstd = "0.13"

# Regex for trace parsing
regex = "1.11"

# Internal crates
rvr-elf = { path = "crates/rvr-elf" }
rvr-isa = { path = "crates/rvr-isa" }
rvr-ir = { path = "crates/rvr-ir" }
rvr-cfg = { path = "crates/rvr-cfg" }
rvr-emit = { path = "crates/rvr-emit" }
rvr-state = { path = "crates/rvr-state" }

[workspace.lints.clippy]
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
