[package]
name = "rvr-elf"
description = "ELF parser for RISC-V binaries"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
rvr-ir.workspace = true
rvr-isa.workspace = true
tempfile.workspace = true
rustc-hash.workspace = true
