[package]
name = "rvr-emit"
description = "C code emission for RISC-V recompiler"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
rayon.workspace = true
rvr-isa.workspace = true
rvr-ir.workspace = true
rvr-cfg.workspace = true
