[package]
name = "rvr-state"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
rvr-ir = { path = "../rvr-ir" }
rvr-elf = { path = "../rvr-elf" }
thiserror.workspace = true
nix = { version = "0.29", features = ["mman"] }

[dev-dependencies]
memoffset = "0.9"
