[package]
name = "rvr"
description = "RISC-V recompiler - compiles ELF to native code via C"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
clap.workspace = true
libloading.workspace = true
rayon.workspace = true
num_cpus.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile.workspace = true
metrics.workspace = true
parking_lot.workspace = true
indicatif.workspace = true
console.workspace = true
rvr-elf.workspace = true
rvr-isa.workspace = true
rvr-ir.workspace = true
rvr-cfg.workspace = true
rvr-emit.workspace = true
rvr-state.workspace = true
gdbstub.workspace = true
gdbstub_arch.workspace = true
zstd.workspace = true
regex.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
perf-event.workspace = true

[lib]
name = "rvr"
path = "src/lib.rs"

[[bin]]
name = "rvr"
path = "src/main.rs"

# Examples at workspace root
[[example]]
name = "basic_compile"
path = "../../examples/basic_compile.rs"

[[example]]
name = "custom_config"
path = "../../examples/custom_config.rs"

[[example]]
name = "custom_tracer"
path = "../../examples/custom_tracer.rs"

[[example]]
name = "custom_extension"
path = "../../examples/custom_extension.rs"

[[example]]
name = "instruction_override"
path = "../../examples/instruction_override.rs"

[[example]]
name = "pipeline_api"
path = "../../examples/pipeline_api.rs"
